# siar_simulator

./: README.md  README.txt
scripts/: installation_siar_simulator.sh
siar_gazebo/: CMakeLists.txt  package.xml
siar_gazebo/cfg/: siar_control.yaml
siar_gazebo/launch/: aerostack_siar_instructions.txt  siar_model.launch  siar_model_basic.launch  siar_model_camera_front.launch  siar_model_complete.launch  siar_simulator.launch  siar_simulator_Test_X_114.launch  siar_simulator_Test_X_130.launch  siar_simulator_Test_X_130_gut30.launch  siar_simulator_aerostack.launch  siar_simulator_basic.launch  siar_simulator_camera_front.launch  siar_simulator_complete.launch  siar_simulator_complete_T114.launch  siar_simulator_complete_T130.launch  siar_simulator_complete_T130_K_gut30.launch  siar_simulator_complete_T130_gut30.launch  siar_simulator_complete_T130_gut30_velodyne.launch  siar_simulator_mbzirc_aerostack.launch  siar_simulator_mbzirc_s3.launch  siar_simulator_tower.launch  siar_teleop_joy_empty_world.launch  siar_teleop_joy_sewer.launch  test_siar_mbzirc.launch  test_simulator_sending_actions.launch
siar_gazebo/models/: model.config  siar.sdf
siar_gazebo/models/T114A_X_5m/meshes/: T114A_X_5m.dae
siar_gazebo/models/T114A_Y_5m/meshes/: T114A_Y_5m_5m.dae
siar_gazebo/models/T114A_straight_5m/meshes/: T114A_straight_5m.dae
siar_gazebo/models/T130_BORRAR/: T130_X_5m.dae  T130_Y_5m_5m.dae  T130_recto_5m.dae
siar_gazebo/models/T130_K_5m_5m/: model.config  model.sdf
siar_gazebo/models/T130_K_5m_5m/meshes/: T130_K_5m_5m.dae
siar_gazebo/models/T130_X_5m_dark_brick/: model.sdf
siar_gazebo/models/T130_gut30_X_5m/meshes/: T130_gut30_X_5m.dae
siar_gazebo/models/T130_gut30_Y_5m_5m/meshes/: T130_gut30_Y_5m_5m.dae
siar_gazebo/models/T130_gut30_straight_5m/meshes/: T130_gut30_straight_5m.dae
siar_gazebo/models/T130_straight_5m_dark_brick/meshes/: T130_straight_5m_dark_brick.dae
siar_gazebo/models/siar_model/: model.config  siar-1.sdf  siar-2.sdf  siar.sdf  siar_mb.sdf  siar_v.sdf
siar_gazebo/models/siar_ramp/: model.config  ramp.sdf
siar_gazebo/models/siar_words/: model.config  model.sdf
siar_gazebo/models/siar_words/meshes/: sewer_robot.dae  siar_simulator.dae
siar_gazebo/models/tower/: model.sdf
siar_gazebo/models/tower/mesh/: tower_1.dae
siar_gazebo/models/tower_1/: model.urdf
siar_gazebo/models/tower_1/mesh/: tower_not_3.dae
siar_gazebo/models/unit_box/: model.sdf
siar_gazebo/scripts/: install_siar_simulator.sh
siar_gazebo/worlds/: basic_siar.world  siar_empty.world  siar_map.world  siar_mbzirc.world  siar_mbzirc_record.world  siar_model.world
siar_plugins/: CMakeLists.txt  package.xml
siar_plugins/data/: cmd_vel_file  interpol_vel  va_file  vr_file
siar_plugins/include/siar_plugins/: .kdev_include_paths  gazebo_ros_gps.h  plugin_siar_wheels_piston.h  sensor_model.h
siar_plugins/launch/: siar_joy.launch  siar_teleop_joy.launch  siar_teleop_joy_simulation.launch
siar_plugins/msg/: SiarStatus.msg
siar_plugins/src/: .kdev_include_paths  gazebo_ros_gps.cpp  plugin_siar_velodyne.cpp  plugin_siar_wheels_piston.cpp  siar_joy_node.cpp  siar_joy_node_2.cpp
siar_simulator/: CMakeLists.txt  package.xml
